Fixed spacing on about me

--- a/css/index.css
+++ b/css/index.css
@@ -97,7 +97,7 @@ ul a:not(:last-child) {
 }
 
 .about-me p {
-    max-width: 600px;
+    max-width: 700px;
     margin-bottom: 20px;
 }
 
